Review #25 - collect to toList 불변 객체로 생성