@@ -5,7 +5,6 @@ import com.wealdy.saemsembackend.domain.category.service.CategoryService;
 import com.wealdy.saemsembackend.domain.core.response.ListResponseDto;
 import com.wealdy.saemsembackend.domain.core.response.Response;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -23,7 +22,7 @@ public class CategoryController {
     public Response<ListResponseDto<CategoryListResponse>> getCategories() {
         List<CategoryListResponse> categories = categoryService.getCategories().stream()
             .map(CategoryListResponse::from)
-            .collect(Collectors.toList());
+            .toList();
 
         return Response.of(ListResponseDto.from(categories));
     }
